// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileOverlay renders an overlay for a % tile with default values 1`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform=""
    >
      <rect
        fill="var(--color-bg-overlay)"
        height="110"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
        width="90"
        x="-45"
        y="0"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay renders an overlay for a % tile with default values 2`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform=""
    >
      <path
        d="M -45 0 A 10 10 0 0 1 -55 10 L -54.99999999999999 100 A 100 100 0 0 0 45 0 Z"
        fill="var(--color-bg-overlay)"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay renders an overlay for a % tile with default values 3`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform=""
    >
      <path
        d="M -45 0 A 10 10 0 0 1 -55 10 L -55 100 L 0 100 A 45 45 0 0 0 45 55 L 45 0 Z"
        fill="var(--color-bg-overlay)"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay renders an overlay for a % tile with the given parameters 1`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(30 10 20)"
    >
      <rect
        fill="var(--color-bg-overlay)"
        height="110"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
        width="90"
        x="-35"
        y="20"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay renders an overlay for a % tile with the given parameters 2`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(30 10 20)"
    >
      <path
        d="M -35 20 A 10 10 0 0 1 -45 30 L -44.99999999999999 120 A 100 100 0 0 0 55 20 Z"
        fill="var(--color-bg-overlay)"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay renders an overlay for a % tile with the given parameters 3`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(30 10 20)"
    >
      <path
        d="M -35 20 A 10 10 0 0 1 -45 30 L -45 120 L 10 120 A 45 45 0 0 0 55 75 L 55 20 Z"
        fill="var(--color-bg-overlay)"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(90 10 20)"
    >
      <rect
        fill="var(--color-bg-overlay)"
        height="110"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
        width="90"
        x="-35"
        y="20"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay updates when the parameter tile is modified 1`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(30 10 20)"
    >
      <path
        d="M -35 20 A 10 10 0 0 1 -45 30 L -44.99999999999999 120 A 100 100 0 0 0 55 20 Z"
        fill="var(--color-bg-overlay)"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay updates when the parameter x is modified 1`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(30 40 20)"
    >
      <rect
        fill="var(--color-bg-overlay)"
        height="110"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
        width="90"
        x="-5"
        y="20"
      />
    </g>
  </div>
</body>
`;

exports[`TileOverlay updates when the parameter y is modified 1`] = `
<body>
  <div>
    <g
      class="tile-overlay"
      transform="rotate(30 10 40)"
    >
      <rect
        fill="var(--color-bg-overlay)"
        height="110"
        stroke="var(--color-fg-overlay)"
        stroke-width="var(--stroke-width-overlay)"
        width="90"
        x="-35"
        y="40"
      />
    </g>
  </div>
</body>
`;
